<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authorization"
    android:id="@+id/activityAuthorization">

    <TextView
        android:id="@+id/tvAuthHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Авторизация"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvAuthRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Забыли пароль?"
        android:textSize="10sp"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editAuthLogin"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editAuthLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Логин"
        android:textSize="14sp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editAuthPassword"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editAuthPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Пароль"
        android:textSize="14sp"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnAuthOk"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAuthOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9688FF"
        android:text="Войти"
        android:textColor="@color/white"
        android:layout_marginStart="50sp"
        android:layout_marginEnd="50sp"
        android:layout_marginBottom="20sp"
        app:cornerRadius="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>