...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menuAccount"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccountChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BB86FC"
            android:text="Сменить пароль"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
            app:cornerRadius="15sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAccountEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BB86FC"
            android:text="Изменить личные данные"
            android:textSize="12sp"
            android:textColor="#FFFFFF"
...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccountNotifications"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:text="Уведомления"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#BB86FC"
                app:shapeAppearance="@style/ButtonCut_Left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnAccountExit"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAccountExit"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
...
