<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activityMain">

    <ImageView
        android:id="@+id/ivHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/mpt_logo"
        android:layout_marginBottom="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Студенческий форум МПТ приветствует вас"
        android:textColor="@color/black"
        android:layout_marginBottom="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAuth"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9688FF"
        android:text="Войти"
        android:textColor="#FFFFFF"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="-5sp"
        app:cornerRadius="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9688FF"
        android:text="Зарегистрироваться"
        android:textColor="#FFFFFF"
        android:layout_margin="15sp"
        app:cornerRadius="10sp"
        android:layout_marginBottom="5sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>